Lab5.txt
#part I
Python 3.6.1
>>> x=4.7
>>> y=2
>>> print(type(x))
<class 'float'>
>>> print(type(y))
<class 'int'>
>>> a=int(x)
>>> print("a=",a,"\tx=",x)
a= 4 	x= 4.7
>>> b=float(y)
>>> print("b=",b,"\tx=",x)
b= 2.0 	x= 4.7
>>> r=8.9
>>> round(r)
9
>>> s=6.5
>>> round(s)
6
>>> t=1.4999
>>> round(t)
1
>>> print"r=",r,"\ts=",s,"\tt=",t)
  File "<pyshell>", line 1
    print"r=",r,"\ts=",s,"\tt=",t)
            ^
SyntaxError: invalid syntax

>>> print("r=",r,"\ts=",s,"\tt=",t)
r= 8.9 	s= 6.5 	t= 1.4999
>>> 

#part II
import math
oneDegreeInRadians = math.pi/180

print("Degrees","\tsin","\tcos")

for i in range (0,181,10):
    print(i,math.sin(i*oneDegreeInRadians),"\t",math.cos(i*oneDegreeInRadians))
Python 3.6.1
>>> x=4.7
>>> y=2
>>> print(type(x))
<class 'float'>
>>> print(type(y))
<class 'int'>
>>> a=int(x)
>>> print("a=",a,"\tx=",x)
a= 4 	x= 4.7
>>> b=float(y)
>>> print("b=",b,"\tx=",x)
b= 2.0 	x= 4.7
>>> r=8.9
>>> round(r)
9
>>> s=6.5
>>> round(s)
6
>>> t=1.4999
>>> round(t)
1
>>> print"r=",r,"\ts=",s,"\tt=",t)
  File "<pyshell>", line 1
    print"r=",r,"\ts=",s,"\tt=",t)
            ^
SyntaxError: invalid syntax

>>> print("r=",r,"\ts=",s,"\tt=",t)
r= 8.9 	s= 6.5 	t= 1.4999
>>> %Reset
>>> %Reset
>>> %Reset
>>> %Reset
>>> import math
>>> sin(90)
Traceback (most recent call last):
  File "<pyshell>", line 1, in <module>
NameError: name 'sin' is not defined
>>> math.sin(90)
0.8939966636005579
>>> math.cos(90)
-0.4480736161291701
>>> math.pi
3.141592653589793
>>> math.sin(math.pi/2)
1.0
>>> math.cos(math.pi/2)
6.123233995736766e-17
>>> %Run Lab5Pt2.py
  File "\\hd.ad.syr.edu\03\191cd5\Documents\App-SU\Python Programs\Lab5Pt2.py", line 6
    print(math.sin(i*oneDegreeInRadians)"\s"math.cos(i*oneDegreeInRadians))
                                           ^
SyntaxError: invalid syntax

>>> %Run Lab5Pt2.py
Traceback (most recent call last):
  File "\\hd.ad.syr.edu\03\191cd5\Documents\App-SU\Python Programs\Lab5Pt2.py", line 1, in <module>
    oneDegreeInRadians = math.pi/180
NameError: name 'math' is not defined
>>> %Run Lab5Pt2.py
  File "\\hd.ad.syr.edu\03\191cd5\Documents\App-SU\Python Programs\Lab5Pt2.py", line 2
    oneDegreeInRadians = math.pi/180
    ^
SyntaxError: unexpected indent

>>> %Run Lab5Pt2.py
Degrees 	sin 	cos
0.0 \s 1.0
0.17364817766693033 \s 0.984807753012208
0.3420201433256687 \s 0.9396926207859084
0.49999999999999994 \s 0.8660254037844387
0.6427876096865393 \s 0.766044443118978
0.766044443118978 \s 0.6427876096865394
0.8660254037844386 \s 0.5000000000000001
0.9396926207859083 \s 0.3420201433256688
0.984807753012208 \s 0.17364817766693041
1.0 \s 6.123233995736766e-17
0.984807753012208 \s -0.1736481776669303
0.9396926207859084 \s -0.3420201433256687
0.8660254037844387 \s -0.4999999999999998
0.766044443118978 \s -0.6427876096865394
0.6427876096865395 \s -0.7660444431189779
0.49999999999999994 \s -0.8660254037844387
0.3420201433256689 \s -0.9396926207859083
0.17364817766693028 \s -0.984807753012208
>>> %Run Lab5Pt2.py
Degrees 	sin 	cos
0 0.0 \s 1.0
10 0.17364817766693033 \s 0.984807753012208
20 0.3420201433256687 \s 0.9396926207859084
30 0.49999999999999994 \s 0.8660254037844387
40 0.6427876096865393 \s 0.766044443118978
50 0.766044443118978 \s 0.6427876096865394
60 0.8660254037844386 \s 0.5000000000000001
70 0.9396926207859083 \s 0.3420201433256688
80 0.984807753012208 \s 0.17364817766693041
90 1.0 \s 6.123233995736766e-17
100 0.984807753012208 \s -0.1736481776669303
110 0.9396926207859084 \s -0.3420201433256687
120 0.8660254037844387 \s -0.4999999999999998
130 0.766044443118978 \s -0.6427876096865394
140 0.6427876096865395 \s -0.7660444431189779
150 0.49999999999999994 \s -0.8660254037844387
160 0.3420201433256689 \s -0.9396926207859083
170 0.17364817766693028 \s -0.984807753012208
>>> %Run Lab5Pt2.py
Degrees 	sin 	cos
0 0.0 \s 1.0
10 0.17364817766693033 \s 0.984807753012208
20 0.3420201433256687 \s 0.9396926207859084
30 0.49999999999999994 \s 0.8660254037844387
40 0.6427876096865393 \s 0.766044443118978
50 0.766044443118978 \s 0.6427876096865394
60 0.8660254037844386 \s 0.5000000000000001
70 0.9396926207859083 \s 0.3420201433256688
80 0.984807753012208 \s 0.17364817766693041
90 1.0 \s 6.123233995736766e-17
100 0.984807753012208 \s -0.1736481776669303
110 0.9396926207859084 \s -0.3420201433256687
120 0.8660254037844387 \s -0.4999999999999998
130 0.766044443118978 \s -0.6427876096865394
140 0.6427876096865395 \s -0.7660444431189779
150 0.49999999999999994 \s -0.8660254037844387
160 0.3420201433256689 \s -0.9396926207859083
170 0.17364817766693028 \s -0.984807753012208
>>> %Run Lab5Pt2.py
  File "\\hd.ad.syr.edu\03\191cd5\Documents\App-SU\Python Programs\Lab5Pt2.py", line 7
    print(i,math.sin(i*oneDegreeInRadians),\s,math.cos(i*oneDegreeInRadians))
                                                                            ^
SyntaxError: unexpected character after line continuation character

>>> %Run Lab5Pt2.py
Degrees 	sin 	cos
0 0.0 	 1.0
10 0.17364817766693033 	 0.984807753012208
20 0.3420201433256687 	 0.9396926207859084
30 0.49999999999999994 	 0.8660254037844387
40 0.6427876096865393 	 0.766044443118978
50 0.766044443118978 	 0.6427876096865394
60 0.8660254037844386 	 0.5000000000000001
70 0.9396926207859083 	 0.3420201433256688
80 0.984807753012208 	 0.17364817766693041
90 1.0 	 6.123233995736766e-17
100 0.984807753012208 	 -0.1736481776669303
110 0.9396926207859084 	 -0.3420201433256687
120 0.8660254037844387 	 -0.4999999999999998
130 0.766044443118978 	 -0.6427876096865394
140 0.6427876096865395 	 -0.7660444431189779
150 0.49999999999999994 	 -0.8660254037844387
160 0.3420201433256689 	 -0.9396926207859083
170 0.17364817766693028 	 -0.984807753012208
>>> %Run Lab5Pt2.py
Degrees 	sin 	cos
0 0.0 	 1.0
10 0.17364817766693033 	 0.984807753012208
20 0.3420201433256687 	 0.9396926207859084
30 0.49999999999999994 	 0.8660254037844387
40 0.6427876096865393 	 0.766044443118978
50 0.766044443118978 	 0.6427876096865394
60 0.8660254037844386 	 0.5000000000000001
70 0.9396926207859083 	 0.3420201433256688
80 0.984807753012208 	 0.17364817766693041
90 1.0 	 6.123233995736766e-17
100 0.984807753012208 	 -0.1736481776669303
110 0.9396926207859084 	 -0.3420201433256687
120 0.8660254037844387 	 -0.4999999999999998
130 0.766044443118978 	 -0.6427876096865394
140 0.6427876096865395 	 -0.7660444431189779
150 0.49999999999999994 	 -0.8660254037844387
160 0.3420201433256689 	 -0.9396926207859083
170 0.17364817766693028 	 -0.984807753012208
180 1.2246467991473532e-16 	 -1.0